# mfgQC

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: about.md  index.md
docs/guide/: assumption-report.ipynb  audit-workflow.ipynb  bayesian-capability.ipynb  choosing-a-control-chart.ipynb  gage-rr.ipynb  quickstart.ipynb
docs/javascripts/: mathjax-config.js  permalink-copy.js
docs/reference/: acceptance-sampling.md  advanced-charts.md  api.md  doe.md  (+14 more)
mfgqc/: __init__.py  _result.py  assumptions.py  attribute_agreement.py  capability.py  constants.py  control_charts.py  data.py  diagnostics.py  errors.py  gage_rr.py  hypothesis.py  ingestion.py  msa.py  multivari.py  nonparametric.py  palette.py  pareto_analysis.py  plotting.py  posthoc.py  precontrol.py  process_sigma.py  registry.py  regression.py  regression_ext.py  sampling.py  timeseries.py  timeseries_charts.py
notebooks/: assumption-report.py  audit-workflow.py  choosing-a-control-chart.py  gage-rr.py  quickstart.py
tests/: conftest.py  reliability_ci_oracle.json  reliability_oracle_key.json  test_api.py  test_assumption_flags.py  test_attribute_agreement.py  test_attribute_charts.py  test_availability.py  test_capability.py  test_capability_ci.py  test_capability_nonnormal.py  test_clean_conservative.py  test_control_charts.py  test_cusum_ewma.py  test_demonstration.py  test_diagnostics.py  test_frontend_readiness.py  test_gage_ci.py  test_gage_rr.py  test_hypothesis.py  test_idiom_consistency.py  test_ingestion.py  test_kaplan_meier.py  test_life_fit.py  test_more_charts.py  test_msa.py  test_mtbf_bounds.py  test_palette.py  test_pareto_contingency.py  test_plotting.py  test_posthoc.py  test_power.py  test_process_sigma.py  test_provenance.py  test_published_oracles_six.py  test_qcdata.py  test_regression_anova.py  test_regression_ext.py  test_reliability_oracle.py  test_reporting.py  (+6 more)
(+83 files in other folders)
